# reflex_scratch

./: .gitignore  Taskfile.yml  pyproject.toml  rxconfig.py
.devcontainer/: Dockerfile  devcontainer.json
reflex_test/: reflex_test.py  run_entrypoint.py  styles.py
reflex_test/components/: __init__.py  audio_recorder.py  basic_carousel.py  component_with_state.py  google_auth.py  multi_select.py  sidebar.py  slick_carousel.py  stripe_payment_element.py  swiper_carousel.py
reflex_test/pages/: __init__.py  alternative_shared_state.py  async_background_testing.py  async_cached_var_issue.py  audio_record.py  audio_recorder_2.py  audio_recorder_polyfill.py  carousel.py  chatroom.py  component_state_in_foreach_issue.py  component_with_state.py  components_and_states_testing.py  cookie_test.py  counter_example.py  drawer_select_issue.py  duplicate_tabs_issue.py  dynamic_update_text_area.py  inherit_multiple_mixin.py  main_app.py  markdown_with_copy.py  match_in_fstring_issue.py  match_testing.py  mixin_cached_or_background_issue.py  multi_checkbox.py  nested_states_example.py  payments_page.py  pydantic_v2_test.py  pydantic_v2_to_base.py  redis_mixin_testing.py  regular_python_in_frontend_example.py  scratch.py  scroll_area_width_issue.py  scroll_snap_testing.py  select_with_id_testing.py  separation_of_display_from_processing.py  set_value_testing.py  settings.py  stateful_component.py  stripe_payment_element.py  styling_test.py  (+5 more)
reflex_test/reflex_issues/: textarea_set_value_thought.py
reflex_test/templates/: template.py
tests/: conftest.py  test_app_harness.py  test_states.py  test_temporary.py
