[tool.poetry]
name = "reflex-test"
version = "0.1.0"
description = ""
authors = ["Tim Child <timjchild@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
#reflex = "^0.4.8"
#reflex = { path = "../reflex"}
reflex = "^0.5.7"
google-auth = { extras = ["requests"], version = "^2.29.0" }
python-dotenv = "^1.0.1"
reflex-webcam = "^0.0.5"
pillow = "^10.3.0"
reflex-carousel = "^0.0.1"
stripe = "^9.1.0"
reflex-audio-capture = "^0.0.2"
fakeredis = "^2.23.0"
dill = "^0.3.8"
pydantic = "^2.7.1"
plotly = "^5.22.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
selenium = "^4.23.1"

[tool.pytest.ini_options]
asyncio_mode = "auto" # Automatically detects async test functions and fixtures and treats them as marked

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
