[project]
name = "reflex-test"
version = "0.1.0"
description = ""
authors = ["Tim Child <timjchild@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dill>=0.3.9",
    "fakeredis>=2.27.0",
    "google-auth>=2.38.0",
    "lorem>=0.1.1",
    "pillow>=11.1.0",
    "plotly>=6.0.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "reflex>=0.7.2",
    "reflex-audio-capture>=0.1.0",
    "reflex-carousel>=0.0.1",
    "reflex-webcam>=0.1.0",
    "stripe>=11.6.0",
]


[dependency-groups]
test = [
    "pytest~=8.3",
    "playwright~=1.47",
    "pytest-playwright~=0.5",
]
typing = [
    "pyright>=1.1.396,<2.0",
    "ruff~=0.9"
]
dev = [
    {include-group = "test"},
    {include-group = "typing"},
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ['tests']
# timeout = 300 # Global timeout for all tests (prevent indefinite hangs, but cancels all tests)
addopts = [
    "--import-mode=importlib", # Recommended by pytest (default is `prepend` for backwards compatibility)
    "-r a",                    # Show summary of (a)ll but passes
    #    "-v",  # Increase verbosity
    "--capture=no",     # Show print/log statements
    "--strict-markers", # Make sure no undefined markers are used
    #    '--runslow', # Run slow tests
]
markers = [
    "slow", # Mark slow tests
]
asyncio_mode = "auto" # Automatically detects async test functions and fixtures and treats them as marked

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.13"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
